# pr

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
cmake/: pre-commit.cmake
include/pr/: any_iterator.hpp  any_kind.hpp  any_view.hpp  context.hpp  fancy_allocator_adaptor.hpp  file.hpp  mapping.hpp  offset_ptr.hpp  permutations_view.hpp  prfloat.hpp  shared_view.hpp  simpl.hpp  simple.hpp
include/pr/detail/: concepts.hpp  intrusive_small_ptr.hpp  iterator_adaptor.hpp  iterator_interface.hpp  view_adaptor.hpp  view_interface.hpp
test/: CMakeLists.txt  any_iterator.cpp  any_view.cpp  prfloat.cpp
